# NClientT

./: .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  build.bat  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1784816397776-8019b6d73c2f88.mjs
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md
scripts/: build-android-legacy.mjs  make-android-icons.mjs  make-icon.mjs  make-icons.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  nclientt.keystore  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cloudflare.rs  commands.rs  config.rs  db.rs  downloader.rs  error.rs  export.rs  http.rs  image_protocol.rs  lib.rs  main.rs  models.rs  notifications.rs  privacy.rs
src/api/: downloads.ts  gallery.ts  index.ts  library.ts  notifications.ts  settings.ts  system.ts  translation.ts
src/components/: AppSidebar.vue  DownloadItem.vue  EmptyState.vue  GalleryCard.vue  GalleryGrid.vue  Pagination.vue  TagChip.vue
src/composables/: useDraggablePosition.ts  useEdgeSwipe.ts  useLazyVisible.ts  useNotifications.ts  useResponsiveSidebar.ts  useScrollCache.ts  useSwipeDismiss.ts
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  ru.json  zh.json
src/router/: index.ts
src/stores/: downloaded.ts  downloads.ts  favorites.ts  gallery.ts  overlay.ts  readProgress.ts  settings.ts  tags.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: title.ts
src/views/: DownloadsView.vue  FavoritesView.vue  GalleryView.vue  HistoryView.vue  HomeView.vue  LocalDetailView.vue  LocalLibraryView.vue  LocalReaderView.vue  ReaderView.vue  SearchView.vue  SettingsView.vue  TagsView.vue
