[package]
name = "nclientt"
version = "0.1.0"
description = "Unofficial cross-platform nhentai desktop client (Tauri 2 rewrite of NClientV3)"
authors = ["NClientT"]
license = "Apache-2.0"
repository = ""
default-run = "nclientt-bin"
edition = "2021"
rust-version = "1.77"

[lib]
name = "nclientt"
crate-type = ["staticlib", "cdylib", "rlib"]

# The bin target shares the package name with the lib, so its Windows .pdb /
# Linux .o output collides with the lib's. Give the binary a distinct output
# name to silence the "output filename collision" warning (a future hard
# error — see rust-lang/cargo#6313). The `[lib] name` above is unchanged, so
# the Android `.so` is still loaded as `libnclientt.so`.
[[bin]]
name = "nclientt-bin"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-fs = "2.5"
tauri-plugin-dialog = "2.7"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate", "cookies", "socks"] }
reqwest_cookie_store = "0.8.0"
url = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Time / dates
chrono = { version = "0.4.38", features = ["serde"] }

# IDs
uuid = { version = "1.11", features = ["v4"] }

# Database
rusqlite = { version = "0.32.1", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# File system utilities
walkdir = "2.5"
dirs = "5.0"
regex = "1.11"

# Misc
once_cell = "1.20"
parking_lot = "0.12"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.8"
futures-util = "0.3"
mime_guess = "2.0"

# Archives / PDF (PDF writer is hand-rolled in export.rs — no lopdf dependency)
zip = { version = "2.2", default-features = false, features = ["deflate", "time"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
# Used to read the Windows WinINET system proxy (HKCU\...\Internet Settings)
# so reqwest can transparently use a system-wide VPN/proxy when the user has
# not configured one in Settings.
windows-registry = "0.4"

[features]
# This feature is used for production builds or when a dev server is not specified, the default
# value is false.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
